--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "helmet": "^3.15.0",
     "materialize-css": "^1.0.0",
     "mongoose": "^5.3.12",
+    "netlify-cli": "^2.2.1",
     "pdfmake": "^0.1.39",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
